force-app/main/default/objects/KimbleOne__Issue__c/KimbleOne__Issue__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Issue</label>
    <nameField>
        <label>Reference</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Issues</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>