force-app/main/default/objects/KimbleOne__Issue__c/fields/KimbleOne__Category__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Category__c</fullName>
    <label>Z_Obsolete - Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>