force-app/main/default/objects/KimbleOne__Issue__c/fields/KimbleOne__IssueCategory__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IssueCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Issue Category</label>
    <referenceTo>KimbleOne__IssueCategory__c</referenceTo>
    <relationshipLabel>Issues</relationshipLabel>
    <relationshipName>Issues</relationshipName>
    <type>Lookup</type>
</CustomField>