force-app/main/default/objects/KimbleOne__Issue__c/fields/KimbleOne__IssueImpact__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IssueImpact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Issue Impact</label>
    <referenceTo>KimbleOne__RiskImpact__c</referenceTo>
    <relationshipLabel>Issues</relationshipLabel>
    <relationshipName>Issues</relationshipName>
    <type>Lookup</type>
</CustomField>