force-app/main/default/objects/KimbleOne__Issue__c/fields/KimbleOne__RaisedByContact__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RaisedByContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Raised By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Issues</relationshipLabel>
    <relationshipName>IssuesRaisedBy</relationshipName>
    <type>Lookup</type>
</CustomField>