force-app/main/default/objects/KimbleOne__Issue__c/fields/KimbleOne__Risk__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Risk__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Risk</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.KimbleOne__DeliveryGroup__c</field>
            <operation>equals</operation>
            <valueField>KimbleOne__Risk__c.KimbleOne__DeliveryGroup__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__Risk__c</referenceTo>
    <relationshipLabel>Issues</relationshipLabel>
    <relationshipName>Issues</relationshipName>
    <type>Lookup</type>
</CustomField>