force-app/main/default/objects/KimbleOne__Issue__c/fields/KimbleOne__TargetCloseDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TargetCloseDate__c</fullName>
    <label>Target Close Date</label>
    <type>Date</type>
</CustomField>